--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -4,7 +4,7 @@
     z-index: 100;
     background-color: var(--background);
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
 }
 
@@ -13,6 +13,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-left: 100px;
     
     font-weight: 600;
 }
