--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -4,7 +4,7 @@
     z-index: 100;
     background-color: var(--background);
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -12,8 +12,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    margin-left: 100px;
+    justify-content: space-around;
     
     font-weight: 600;
 }
